# snail-dot-faith

./: README.md  pyproject.toml
src/: wsgi.py
src/snail_dot_faith/: __init__.py
src/snail_dot_faith/templates/: about-me.html  base.html  button_response.html  dice-firefox.html  dice.html  index.html
