[project]
name = "snail_dot_faith"
version = "0.0.1"
dependencies = ["flask"]
requires-python = ">=3.12"
authors = [{ name = "Cutipus", email = "Cutipus@proton.me" }]
description = "Backend for snail.faith website"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.urls]
Repository = "https://github.com/Cutipus/snail-dot-faith"
Issues = "https:/`/github.com/Cutipus/snail-dot-faith/issues"
